# scylla-migrator

./: .gitignore  .gitmodules  .scalafmt.conf  .travis.yml  CONTRIBUTING.md  Dockerfile  Dockerfile.release  HACKING.md  Makefile  README-MARIADB.md  README.dynamodb.md  README.md  README.parquet.md  TODO.md  TODO2.md  build-mariadb.sh  build.sbt  build.sh  config-aerospike.yaml.example  config.dynamodb.yaml.example  config.parquet-loader.yaml.example  config.yaml.example  config.yaml.mariadb.example  deploy_spark_cluster.py  docker-build-jar.sh  docker-compose-dynamodb.yml  docker-compose-scylla.yml  docker-compose-tests.yml  docker-compose-vnodes-scylla.yml  docker-compose-vnodes.yml  docker-compose.yaml  docker-entrypoint.sh  requirements.txt
.github/: attempt.sh  dependabot.yml  insist.sh  spark-cache.sh  wait-for-cql.sh  wait-for-port.sh
.github/actions/spark-image-cache/: action.yml
.github/workflows/: ToRemove.yml  build.yml  docker-publish.yml  docs-pages.yaml  docs-pr.yaml  release.yaml  security-scan.yaml  spark-cache-cleanup.yml  spark-image.yml  tests-aws.yml  tests.yml  tutorial-dynamodb.yaml
ansible/: ansible.cfg  scylla-migrator.yml
ansible/files/: config.dynamodb.yaml.txt  config.dynamodb.yml  spark-env-master-dynamo-sample  spark-env-master-sample  spark-env-worker-dynamo-sample  spark-env-worker-sample  start-slave.sh  start-spark.sh  stop-slave.sh  stop-spark.sh
ansible/inventory/: hosts.ini
ansible/templates/: spark-env-master-sample  spark-env-worker  spark-env-worker-sample  spark-history-server.service  spark-master.service  spark-worker.service  submit-alternator-job.sh  submit-alternator-validator.sh  submit-cql-job-validator.sh  submit-cql-job.sh
dockerfiles/spark/: Dockerfile  entrypoint.sh
docs/: Makefile  pyproject.toml
docs/_utils/: redirects.yaml
docs/source/: conf.py  configuration.rst  index.rst  migrate-from-cassandra-or-parquet.rst  migrate-from-dynamodb.rst  migrate-from-mongodb.md  rename-columns.rst  resume-interrupted-migration.rst  run-the-migration.rst  sample-page.rst  stream-changes.rst  validate.rst
docs/source/getting-started/: ansible.rst  aws-emr.rst  docker.rst  index.rst  spark-standalone.rst
docs/source/tutorials/: index.rst
docs/source/tutorials/dynamodb-to-scylladb-alternator/: create-25-items.sh  create-data.sh  docker-compose.yaml  dockerfiles  index.rst  run-migrator.sh
docs/source/tutorials/dynamodb-to-scylladb-alternator/spark-data/: config.yaml
migrator/src/main/scala/com/scylladb/migrator/: AttributeValueUtils.scala  AwsUtils.scala  Connectors.scala  ConsistencyLevelUtils.scala  DynamoStreamPoller.scala  DynamoUtils.scala  InteractiveMigrator.scala  MariaDBMigrator.scala  Migrator.scala  MongoDBMigrationHandler.scala  PathIO.scala  SavepointStorage.scala  SavepointStore.scala  SavepointsManager.scala  SavepointsResume.scala  Validator.scala
native/: CMakeLists.txt
native/include/: mariadb_scylla_migrator.h  mariadb_scylla_migrator_jni.h
native/src/: jni_bridge.cpp  mariadb_connection.cpp  migrator.cpp  scylladb_connection.cpp
project/: plugins.sbt
scripts/kinesis-to-alternator/: .env  Dockerfile  main.py  requirements.txt
src/main/scala/com/scylladb/migrator/: Config.scala  Connectors.scala  DynamoDBMigrator.scala  DynamoDBMigratorConfig.scala  DynamoUtils.scala  Migrator.scala  ParquetLoader.scala  ParquetLoaderConfig.scala  Validator.scala  converters.scala
src/main/scala/com/scylladb/migrator/config/: AWSCredentials.scala  CopyType.scala  Credentials.scala  MigratorConfig.scala  ParquetLoaderConfig.scala  ParquetSourceSettings.scala  Savepoints.scala  SourceSettings.scala  TargetSettings.scala  Validation.scala
src/main/scala/com/scylladb/migrator/readers/: Cassandra.scala  DynamoDB.scala  Parquet.scala  SourceDataFrame.scala
src/main/scala/com/scylladb/migrator/validation/: RowComparisonFailure.scala
src/main/scala/com/scylladb/migrator/writer/: Scylla.scala  Writer.scala
src/main/scala/com/scylladb/migrator/writers/: DynamoDB.scala  DynamoStreamReplication.scala  Scylla.scala
tests/docker/: .gitignore  job-flow.json
tests/docker/aerospike/: aerospike.conf
tests/src/test/configurations/: aerospike-to-scylla-basic.yaml  aerospike-to-scylla-bins-filter.yaml  aerospike-to-scylla-bins-schema.yaml  aerospike-to-scylla-metadata.yaml  aerospike-to-scylla-sample-size.yaml  aerospike-to-scylla-schema-override.yaml  bench-cassandra-to-scylla-simple-nots.yaml  bench-cassandra-to-scylla-simple-ts.yaml  bench-e2e-aerospike-to-scylla.yaml  bench-e2e-cassandra-to-parquet.yaml  bench-e2e-cassandra-to-scylla-nots.yaml  bench-e2e-cassandra-to-scylla-ts.yaml  bench-e2e-dynamodb-to-alternator.yaml  bench-e2e-dynamodb-to-s3export.yaml  bench-e2e-parquet-to-scylla.yaml  bench-e2e-s3export-to-alternator.yaml  bench-e2e-scylla-to-parquet.yaml  bench-e2e-scylla-to-scylla.yaml  bench-scylla-to-scylla-simple.yaml  cassandra-to-parquet-timestamps.yaml  cassandra-to-scylla-basic.yaml  cassandra-to-scylla-copy-missing-rows-fixed-target-write-settings.yaml  cassandra-to-scylla-copy-missing-rows.yaml  cassandra-to-scylla-counters.yaml  cassandra-to-scylla-renames.yaml  dynamodb-s3-export-to-alternator-basic-provisioned.yaml  dynamodb-s3-export-to-alternator-basic.yaml  dynamodb-s3-export-to-alternator-no-savepoints.yaml  dynamodb-to-alternator-assume-role.yaml  dynamodb-to-alternator-basic-provisioned.yaml  dynamodb-to-alternator-basic.yaml  dynamodb-to-alternator-copy-missing-rows.yaml  dynamodb-to-alternator-issue-103-provisioned.yaml  dynamodb-to-alternator-issue-103.yaml  dynamodb-to-alternator-old-scylla.yaml  dynamodb-to-alternator-part1-provisioned.yaml  dynamodb-to-alternator-part1.yaml  dynamodb-to-alternator-part2-provisioned.yaml  dynamodb-to-alternator-part2.yaml  dynamodb-to-alternator-renames-provisioned.yaml  (+38 more)
tests/src/test/resources/: application.conf
tests/src/test/scala/com/scylladb/migrator/: AWS.scala  AttributeValueUtils.scala  AwsUtilsTest.scala  BasicMigrationTest.scala  Benchmark.scala  BenchmarkDataGenerator.scala  CassandraCompat.scala  CassandraUtils.scala  E2E.scala  (+21 more)
(+281 files in other folders)
