[tool.poetry]
name = "sphinx-docs"
description = "ScyllaDB Documentation"
version = "0.1.0"
authors = ["ScyllaDB Documentation Contributors"]

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "6.0.1"
pygments = "2.15.1"
sphinx-scylladb-theme = "~1.7.2"
myst-parser = "2.0.0"
sphinx-autobuild = "2021.3.14"
Sphinx = "7.2.6"
sphinx-multiversion-scylla = "^0.3.1"
sphinx-sitemap = "2.5.1"
redirects_cli ="~0.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
